Enhance Verilog code formatting and readability in documentation; add custom CSS for code blocks

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,9 @@ theme:
     - search.suggest
     - search.highlight
 
+extra_css:
+  - stylesheets/custom.css
+  
 nav:
   - Home: index.md
   - Digital Design: questions/digital.md
