--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,13 @@ extra_css:
 
 nav:
   - Home: index.md
-  - Digital Design: questions/digital.md
+  - Digital Design:
+    - Overview: questions/digital.md
+    - Logic Design Questions: questions/digital/logic-design.md
+    - Clocking, Clock Dividers, and Reset Questions: questions/digital/clocking.md
+    - Clock Domain Crossing (CDC) Questions: questions/digital/cdc.md
+    - Power-Related Questions: questions/digital/power.md
+    - Digital Filter Questions (FIR, IIR and CIC): questions/digital/digital-filters.md
   - Protocols: questions/protocol.md  
   - Verification: questions/verification.md
   - Physical Design: questions/physical.md
