Refactor navigation structure for Digital Design section and update links for consistency

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ theme:
     - navigation.top
     - search.suggest
     - search.highlight
+    - navigation.expand
 
 extra_css:
   - stylesheets/custom.css
