Refactor APB documentation for improved clarity and structure in phases and add Verilog questions section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
       - Clock Domain Crossing (CDC) Questions: questions/digital/cdc.md
       - Power-Related Questions: questions/digital/power.md
       - Digital Filter Questions (FIR, IIR and CIC): questions/digital/digital-filters.md
+      - Verilog Questions: questions/digital/verilog.md
   - Protocols:
       - Overview: questions/protocols.md
       - APB (Advanced Peripheral Bus): questions/protocols/apb.md
