--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ extra_css:
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.js
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/contrib/auto-render.min.js
-
+  - javascripts/katex-init.js #Add this line to initialize KaTeX
 nav:
   - Home: index.md
   - Digital Design:
